--- a/.env.sample
+++ b/.env.sample
@@ -7,7 +7,7 @@ DB_HOST=172.31.94.110
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=sePret^i
-DB_CONNECTION=msql
+DB_CONNECTION=mysql
 DB_PORT=3306
 
 CACHE_DRIVER=file
